<resources>
    <string name="app_name">Migraine Tracking</string>

    <!--Titulos de las Actividades-->
    <string name="title_activity_menu">Menú</string>
    <string name="title_activity_registrar_episodio">Registra un episodio</string>
    <string name="title_activity_grabar_episodio">Graba un episodio</string>
    <string name="title_activity_escuchar_grabaciones">Escucha tus grabaciones</string>
    <string name="title_activity_ver_analisis">Analisis de episodios</string>
    <string name="title_activity_ver_episodios">Lista de episodios de dolor</string>
    <string name="title_activity_registrar_usuario">Registra un usuario</string>
    <string name="title_activity_menu_doctor">Menú</string>
    <string name="title_activity_ver_doctores">VerDoctoresActivity</string>
    <string name="title_activity_episodios_doctor">EpisodiosDoctorActivity</string>
    <string name="title_activity_ver_pacientes">VerPacientesActivity</string>
    <string name="title_activity_ver_episodios_doctor">EpisodiosDoctorActivity</string>
    <string name="title_activity_episodios_paciente">EpisodiosPaciente</string>

    <!--Actividad Principal-->
    <string name="main_activity_usuario_label">Usuario</string>
    <string name="main_activity_contrasenia_label">Contraseña</string>
    <string name="main_activity_usuario_edit">Ingrese su usuario</string>
    <string name="main_activity_contrasenia_edit">Ingrese su contraseña</string>
    <string name="main_activity_cedula_edit">Ingrese su identificación</string>
    <string name="main_activity_perfil_label">Escoja su tipo de perfil</string>
    <string name="main_activity_id_edit">Ingrese su ID</string>
    <string name="main_activity_entrar_button">Entrar</string>
    <string name="main_activity_crear_button">Crear</string>

    <!--Actividad Menu Paciente-->
    <string name="menu_paciente_registrarEpisodioButton">Registrar episodio de dolor</string>
    <string name="menu_paciente_grabarEpisodioButton">Grabar episodio de dolor</string>
    <string name="menu_paciente_escucharGrabacionesButton">Escuchar grabaciones</string>
    <string name="menu_paciente_verEpisodiosButton">Lista de episodios registrados</string>

    <!--Actividad Registrar Episodio-->
    <string name="registrar_episodio_localizacion_edit">Ubicación del dolor</string>
    <string name="registrar_episodio_horasSueno_edit">¿Cuántas horas ha dormido?</string>
    <string name="registrar_episodio_intensidad_label">¿Qué intensidad le pondría al dolor?</string>
    <string name="registrar_episodio_agregarMedicamento_button">Agregar un medicamento</string>
    <string name="registrar_episodio_agregarEpisodio_button">Registrar episodio</string>
    <string name="registrar_episodio_catalizadores_label">Escoja los catalizadores</string>
    <string name="registrar_episodio_sintomas_label">Escoja los síntomas</string>
    <string name="registrar_episodio_fecha_label">Introduzca la fecha en que ocurrió el episodio</string>

    <!--Actividad Registrar Usuario-->
    <string name="registrar_usuario_nombre_label">Introduzca su nombre</string>
    <string name="registrar_usuario_nombre_edit">Nombre completo</string>
    <string name="registrar_usuario_usuario_label">Introduzca un usuario. Debe ser un correo electronico y contener un número</string>
    <string name="registrar_usuario_usuario_edit">Usuario</string>
    <string name="registrar_usuario_cedula_label">Documento de identidad</string>
    <string name="registrar_usuario_cedula_edit">Cédula</string>
    <string name="registrar_usuario_contrasenia_label">Introduzca una contraseña. Debe tener una mayúscula, un número y tener más de nueve caracteres</string>
    <string name="registrar_usuario_contrasenia_edit">Contraseña</string>
    <string name="registrar_usuario_registrar_button">Crear usuario</string>
    <string name="registrar_usuario_fecha_edit">Fecha de nacimiento</string>
    <string name="registrar_usuario_id_label">Ingrese un identificador de doctor. Debe ser un número</string>
    <string name="registrar_usuario_id_edit">Identificador</string>

    <!--Dialogo Agregar Medicamento-->
    <string name="dialogo_medicamento_nombre_edit">Nombre medicamento</string>
    <string name="dialogo_medicamento_fecha_edit">Fecha de consumo</string>
    <string name="dialogo_medicamento_agregar_button">Agregar</string>

    <!--Actividad Menu Doctor-->
    <string name="menu_doctor_colegas_button">Ver colegas</string>
    <string name="menu_doctor_episodios_button">Ver episodios de un paciente</string>
    <string name="menu_doctor_pacientes_button">Ver todos los pacientes</string>
    <string name="menu_doctor_pacientes_doctor_button">Ver mis pacientes</string>

    <!--Actividad Episodios Doctor-->
    <string name="episodios_doctor_paciente_label">Ingrese la cédula del paciente. Debe ser una cédula válida</string>
    <string name="episodios_doctor_paciente_edit">Cédula</string>
    <string name="episodios_doctor_buscar_button">Buscar</string>
    <string name="episodios_doctor_buscarFechas_button">Buscar por fechas</string>
    <string name="episodios_doctor_fechas_label">Si desea realizar una búsqueda por fechas del paciente con la cédula dada</string>
    <string name="episodios_doctor_fecha_inicio_label">Ingresa la fecha de inicio de la búsqueda</string>
    <string name="episodios_doctor_fecha_fin_label">Ingresa la fecha final de la búsqueda</string>

    <!--Dialogo Introducir ID-->
    <string name="dialogo_id_cedula_label">Introduzca la cedula del paciente del cual quiere ver los episodios</string>
    <string name="dialogo_id_cedula_edit">Cédula</string>
    <string name="dialogo_id_buscar_button">Buscar</string>

    <!--Generales-->
    <string name="paciente">Paciente</string>
    <string name="doctor">Doctor</string>
    <string name="formato_fecha">El formato es dd/mm/yyyy</string>
    <string name="hint_fecha">Fecha (dd/mm/yyyy)</string>
    <string name="action_settings">Ajustes</string>
    <string name="dia">Día</string>
    <string name="mes">Mes</string>
    <string name="anio">Año</string>

    <!--Listas Especiales-->
    <string name="listaCatalizadores">Seleccione un catalizador</string>
    <string-array name="cat">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="perfiles_spinner">
        <item>"Paciente"</item>
        <item>"Doctor"</item>
    </string-array>

    <string-array name="numeros">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="dias">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="Meses">
    <item>Enero</item>
    <item>Febrero</item>
    <item>Marzo</item>
    <item>Abril</item>
    <item>Mayo</item>
    <item>Junio</item>
    <item>Julio</item>
    <item>Agosto</item>
    <item>Septiembre</item>
    <item>Octubre</item>
    <item>Noviembre</item>
    <item>Diciembre</item>
    </string-array>

    <string-array name="Anios">
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>

    <!--Colores-->
    <color name="Black">#ffffff</color>
    <color name="ExpandChildBackground">#ffabaab6</color>
    <color name="ExpandGroupBackground">#ff3071a9</color>
</resources>
