<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/localizacion_edit"
        android:hint="@string/registrar_episodio_localizacion_edit"/>

    <TextView android:text="@string/formato_fecha" android:layout_height="wrap_content" android:layout_width="wrap_content"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:columnCount="3"
        android:rowCount="2">
        
        </GridLayout>

    <EditText android:id="@+id/fecha_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fecha"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_episodio_horasSueno_edit"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/numeros"
        android:id="@+id/spinnerhoras"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Que intensidad le pondria al dolor"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/numeros"
        android:id="@+id/spinnerintensidad"/>

    <TextView android:text="@string/registrar_episodio_catalizadores_label" android:layout_height="wrap_content" android:layout_width="wrap_content"/>

    <grupo9.arquisoft.migrainetrackingmobile.extras.MultiSelectionSpinner
        android:id="@+id/spinCatalizadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView android:text="@string/registrar_episodio_sintomas_label" android:layout_height="wrap_content" android:layout_width="wrap_content"/>


    <grupo9.arquisoft.migrainetrackingmobile.extras.MultiSelectionSpinner
        android:id="@+id/spinSintomas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_episodio_agregarMedicamento_button"
            android:onClick="agregarMedicamento"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar_episodio_agregarEpisodio_button"
        android:onClick="registrarEpisodioDolor"/>

</LinearLayout>
</ScrollView>