<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText android:id="@+id/usuario_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/main_activity_usuario_edit"/>

    <EditText android:id="@+id/contrasenia_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_contrasenia_edit"
        android:layout_below="@+id/usuario_edit"
        android:layout_centerHorizontal="true"
        android:password="true"/>

    <EditText
        android:id="@+id/cedula_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/contrasenia_edit"
        android:hint="@string/main_activity_cedula_edit"
        android:password="false" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/perfil_label"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_perfil_label"
        android:layout_below="@+id/cedula_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/groupRadio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/perfil_label"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/pacientesRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paciente"/>
        <RadioButton
            android:id="@+id/doctoresRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor"/>
    </RadioGroup>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/groupRadio"
        android:columnCount="5"
        android:rowCount="1">

        <Button android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/entrar_button"
            android:text="@string/main_activity_entrar_button"
            android:onClick="login"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_toLeftOf="@+id/nuevo"
            android:layout_toStartOf="@+id/nuevo" />

        <Button
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_crear_button"
            android:id="@+id/nuevo"
            android:onClick="crear"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/texto"
            android:layout_alignEnd="@+id/texto" />

    </GridLayout>

</RelativeLayout>
</ScrollView>