<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/nombre_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialogo_medicamento_nombre_edit"
        android:layout_above="@+id/fecha_edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    />

    <TextView android:text="@string/formato_fecha" android:layout_height="wrap_content" android:layout_width="wrap_content"/>
    <EditText
        android:id="@+id/fecha_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialogo_medicamento_fecha_edit"
        android:layout_above="@+id/dialogButtonOK"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    />

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_medicamento_agregar_button"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
