<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_paciente_registrarEpisodioButton"
        android:onClick="registrarEpisodio"
    />

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_paciente_grabarEpisodioButton"
        android:onClick="grabarEpisodio"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_paciente_escucharGrabacionesButton"
        android:onClick="escucharGrabaciones"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_paciente_verEpisodiosButton"
        android:onClick="verEpisodios"/>

</LinearLayout>
