<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/dialogo_id_cedula_label"
       android:layout_above="@+id/editText"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"/>

   <EditText
       android:layout_width="match_parent"
       android:id="@+id/editText"
       android:layout_height="wrap_content"
       android:hint="@string/dialogo_id_cedula_edit"
       android:layout_above="@+id/button"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogo_id_buscar_button"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>